--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Transforming Ideas into Innovation" />
+    <meta
+      name="description"
+      content="B2Y Infy Solutions, IT services, software development, digital transformation, technology consulting, innovation, tailored strategies"
+    />
+
+    <!-- preview image -->
+    <meta
+      property="'og:image"
+      content="../src/assets/images/welcome screen.png"
+    />
+    <meta
+      name="twitter:card"
+      content="../src/assets/images/welcome screen.png"
+    />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
