--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,31 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="B2Y Infy Solutions, IT services, software development, digital transformation, technology consulting, innovation, tailored strategies"
+      content="IT Software Product, Digital transformation, Innovation, Services & Consulting"
     />
 
     <!-- preview image -->
+    <meta property="og:title" content="B2Y Infy Solutions" />
     <meta
-      property="'og:image"
-      content="../src/assets/images/welcome screen.png"
+      property="og:description"
+      content="IT Software Product, Digital transformation, Innovation, Services & Consulting"
     />
     <meta
+      property="og:image"
+      content="../src/assets/images/welcome screen.png"
+    />
+    <meta property="og:url" content="../src/assets/images/welcome screen.png" />
+    <meta
       name="twitter:card"
+      content="../src/assets/images/welcome screen.png"
+    />
+    <meta name="twitter:title" content="B2Y Infy Solutions" />
+    <meta
+      name="twitter:description"
+      content="IT Software Product, Digital transformation, Innovation, Services & Consulting"
+    />
+    <meta
+      name="twitter:image"
       content="../src/assets/images/welcome screen.png"
     />
 
