--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,12 @@
     />
     <meta
       property="og:image"
-      content="../src/assets/images/welcome screen.png"
+      content="https://drive.google.com/file/d/1EKJQCyHRlaR0MO4xS-at-oOHZaaI9vky/view?usp=drive_link"
     />
-    <meta property="og:url" content="../src/assets/images/welcome screen.png" />
+    <meta
+      property="og:url"
+      content="https://drive.google.com/file/d/1EKJQCyHRlaR0MO4xS-at-oOHZaaI9vky/view?usp=drive_link"
+    />
     <meta
       name="twitter:card"
       content="../src/assets/images/welcome screen.png"
@@ -31,7 +34,7 @@
     />
     <meta
       name="twitter:image"
-      content="../src/assets/images/welcome screen.png"
+      content="https://drive.google.com/file/d/1EKJQCyHRlaR0MO4xS-at-oOHZaaI9vky/view?usp=drive_link"
     />
 
     <!--
