--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,16 @@
       content="IT Software Product, Digital transformation, Innovation, Services & Consulting"
     />
 
-    <!-- preview image -->
+    <!-- HTML Meta Tags -->
+    <title>B2Y Infy Solutions</title>
+    <meta
+      name="description"
+      content="IT Software Product, Digital transformation, Innovation, Services & Consulting"
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://b2yinfy.vercel.app/" />
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="B2Y Infy Solutions" />
     <meta
       property="og:description"
@@ -17,13 +26,13 @@
     />
     <meta
       property="og:image"
-      content="https://drive.google.com/file/d/19KIjMkS96A19EViZtZqv9gT83vCVE8d8/view?usp=drive_link"
+      content="https://opengraph.b-cdn.net/production/documents/1fd821fb-4bd8-4f8f-b7de-72d193897378.png?token=ANw5Zg9d6scGOAGPpxS-mJpqYSWObBqnWN0ozVconk0&height=629&width=1200&expires=33246331100"
     />
 
-    <meta
-      name="twitter:card"
-      content="https://drive.google.com/file/d/19KIjMkS96A19EViZtZqv9gT83vCVE8d8/view?usp=drive_link"
-    />
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="b2yinfy.vercel.app" />
+    <meta property="twitter:url" content="https://b2yinfy.vercel.app/" />
     <meta name="twitter:title" content="B2Y Infy Solutions" />
     <meta
       name="twitter:description"
@@ -31,9 +40,10 @@
     />
     <meta
       name="twitter:image"
-      content="https://drive.google.com/file/d/19KIjMkS96A19EViZtZqv9gT83vCVE8d8/view?usp=drive_link"
+      content="https://opengraph.b-cdn.net/production/documents/1fd821fb-4bd8-4f8f-b7de-72d193897378.png?token=ANw5Zg9d6scGOAGPpxS-mJpqYSWObBqnWN0ozVconk0&height=629&width=1200&expires=33246331100"
     />
 
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
